# p1-pit-ecl-engine

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY_AUDIT.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: ecl_output.csv  reporting_panel.csv  synthetic_loans.csv  synthetic_macro.csv
notebooks/: 01_end_to_end.ipynb  02_classification.ipynb  03_vasicek_ou.ipynb  04_markov_migration.ipynb  05_sicr_staging.ipynb  06_ecl_provisions.ipynb
reports/: audit_trail.json  bandit_report.txt
scripts/: gen_extra_notebooks.py  gen_notebook.py  run_all.py
src/: __init__.py  classifier.py  data_gen.py  ecl.py  features.py  markov.py  ornstein_uhlenbeck.py  pd_term_structure.py  pipeline.py  redact.py  reporting.py  staging.py  stress.py  var_macro.py  vasicek.py
tests/: conftest.py  test_all.py  test_classifier_supplemental.py  test_ecl_supplemental.py  test_integration.py  test_var_macro.py
