[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pit-ecl-engine"
version = "0.3.0"
description = "Point-in-Time Expected Credit Loss engine with Vasicek macroeconomic calibration and Ind AS 109 dynamic asset staging."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Piyush", email = "piyush@example.invalid"},
]
keywords = [
    "credit-risk",
    "ecl",
    "ifrs9",
    "ind-as-109",
    "vasicek",
    "ornstein-uhlenbeck",
    "lightgbm",
    "calibration",
    "expected-credit-loss",
    "retail-credit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/404Piyush/p1-pit-ecl-engine"
Issues = "https://github.com/404Piyush/p1-pit-ecl-engine/issues"
Changelog = "https://github.com/404Piyush/p1-pit-ecl-engine/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*", "data*", "notebooks*", "reports*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:statsmodels",
    "ignore::FutureWarning:statsmodels",
]

[tool.bandit]
exclude_dirs = ["tests", "data", "reports", "notebooks"]
skips = ["B101"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
